--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 		body{
 	font-family: sans-serif;
 	background-color: beige;
-	background: linear-gradient(135deg, #ff7e5f, #feb47b);
+	background: beige;
 }
 
 
