--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 
 		body{
-	font-family: sans-serif;
-	background-color: beige;
-	background: beige;
+	font-family: verdana;
+	background-image: url('C:/Users/Mary Joy/Downloads/rain.png');
 }
+
 
 
 #container{
@@ -12,28 +12,30 @@
 	border: 1px solid #333;
 	margin: 50px auto;
 	background-color: #fff;
-	box-shadow: 2px 2px 2px 2px rgba(1, 1, 1, 1.3);
+	
 	border-radius: 10px;
 	padding: 10px;
 
-    background: linear-gradient(135deg, #6e8efb, #a77bca);
+   
+
 }
 #logoArea img{
 	display: flex;
 	width: 100%;
-	min-height: 30vh;
+	;
 	height: 100%;
 	justify-content: center;
 	align-items: center;
 	margin: 10px auto;
 	position: relative;
 	border-radius: 10px 10px 0px 0px;
-	background-size: cover;
+	
 	padding: 10px 0px;
-	color: #fff;
+	
 }
 h3{
 	text-align: center;
+	font-weight: bold;
 }
 
 
@@ -63,15 +65,10 @@ h3{
 	margin: auto;
 }
 #buttonArea button{
-	background-color: darkgoldenrod;
+	background-color: #007bff;
 	border: none;
 	padding: 10px 15px;
 	border-radius: 50px;
 	font-size: 15px;
-}
-#buttonArea button:hover{
-	font-size: 18px;
-	background-color:cyan;
-	transition: 3s all ease;
 }
 
